--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -31,6 +31,10 @@ h4, h5, h6 {
 }
 
 /* admin */
+.navbar-header {
+    padding: 5px 0;
+}
+
 .stats {
     margin-right: auto;
     margin-left: auto;
