--- a/app/templates/admin/add_post.html
+++ b/app/templates/admin/add_post.html
@@ -1,10 +1,9 @@
 {% extends 'admin/admin_base.html' %}
-{% block header %}
-Create and publish a new post
+{% block header %}Create and publish a new post
 {% endblock header %}
 {% block content %}
 <div class="container">
-    <form method="POST" class="form">
+    <form method="post" class="form" action="">
         {{ form.hidden_tag() }}
         <div class="form-group">
             {{ form.title.label(class_='control-label') }}
@@ -17,9 +16,16 @@ Create and publish a new post
             {{ form.body.label }} {{ form.body(class_='form-control') }}
         </div>
         <div class="form-group">
-            {{ form.publish.label }} {{ form.publish(class_='form-control') }}
+            {{ form.publish.label }} {{ form.publish(class_='form-control datetimepicker') }}
         </div>
         <button type="submit" class="btn btn-success btn-block">Save</button>
     </form>
 </div>
 {% endblock content %}
+{% block js %}
+<script type="text/javascript">
+    $(function () {
+        $('.datetimepicker').datetimepicker();
+    });
+</script>
+{% endblock js %}
