--- a/app/templates/admin/users.html
+++ b/app/templates/admin/users.html
@@ -1,17 +1,5 @@
 {% extends 'admin/admin_base.html' %}
-{% with messages = get_flashed_messages(with_categories=true) %}
-  {% if messages %}
-    {% for category, message in messages %}
-    <div class="alert alert-{{ category }} alert-dismissible" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">&times;</button>
-        {{ message }}
-    </div>
-    {% endfor %}
-  {% endif %}
-{% endwith %}
-{% block header %}
-    Users
-{% endblock header %}
+{% block header %}Users{% endblock header %}
 {% block content %}
 <section>
     <div class="container">
@@ -20,30 +8,29 @@
                 <a href="{{ url_for('admin.add_user') }}" class="btn btn-primary btn-block">Add new user</a>
             </div>
         </section>
-        <hr>
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Username</th>
-                        <th>E-mail</th>
-                        <th>Edit</th>
-                        <th>Delete</th>
-                    </tr>
+                <tr>
+                    <th>#</th>
+                    <th>Username</th>
+                    <th>E-mail</th>
+                    <th>Edit</th>
+                    <th>Delete</th>
+                </tr>
                 </thead>
                 <tbody>
-                    {% for user in users %}
-                    <tr>
-                        <th scope="row">{{ user.id }}</th>
-                        <td>{{ user.username }}</td>
-                        <td>{{ user.email }}</td>
-                        {% if user.id != current_user.id %}
-                        <td><a href="#" class="btn btn-success"><span class="fa fa-pencil"></span></a></td>
-                        <td><a href="{{ url_for('admin.delete_user', user_id=user.id) }}" class="btn btn-success"><span class="fa fa-trash"></span></a></td>
-                        {% endif %}
-                    </tr>
-                    {% endfor %}
+                {% for user in users %}
+                <tr>
+                    <th scope="row">{{ user.id }}</th>
+                    <td>{{ user.username }}</td>
+                    <td>{{ user.email }}</td>
+                    <td><a href="{{ url_for('admin.edit_user', user_id=user.id) }}" class="btn btn-success"><span class="fa fa-pencil"></span></a></td>
+                    {% if user.id != current_user.id %}
+                    <td><a href="{{ url_for('admin.delete_user', user_id=user.id) }}" class="btn btn-danger"><span class="fa fa-trash"></span></a></td>
+                    {% endif %}
+                </tr>
+                {% endfor %}
                 </tbody>
             </table>
         </div>
