--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,13 +48,17 @@
         </div>
     </nav>
     {% endblock navbar %}
-    {% block content %}{% endblock content %}
+    {% block content %}
+    <main>
+
+    </main>
+    {% endblock content %}
 
     <footer>
         <p class="text-center">&copy; dasdachs 2016</p>
     </footer>
     <!-- scripts -->
-    <script src="https://ajax.googsleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous">
     {% block js %}
     {% endblock js %}
