--- a/app/templates/admin/posts.html
+++ b/app/templates/admin/posts.html
@@ -16,6 +16,7 @@ Posts
                         <th>Published</th>
                         <th>Author</th>
                         <th>Edit</th>
+                        <th>Delete</th>
                     </tr>
                 </thead>
                 <tbody>
