--- a/app/templates/admin/add_post.html
+++ b/app/templates/admin/add_post.html
@@ -28,7 +28,7 @@
                 <div class="input-group-addon">
                     <span class="fa fa-calendar"></span>
                 </div>
-                {{ form.publish(class_='form-control') }}
+                {{ form.pub_date(class_='form-control') }}
             </div>
         </div>
         <button type="submit" class="btn btn-success btn-block">Save</button>
