--- a/app/templates/blog/post.html
+++ b/app/templates/blog/post.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ post.title }}| das blog{% endblock title %
+{% block title %}{{ post.title }}| das blog{% endblock title %}
 {% block content %}
 <section>
     <article>
