--- a/app/templates/blog/home.html
+++ b/app/templates/blog/home.html
@@ -1,20 +1,22 @@
 {% extends 'base.html' %}
 {% block title %}das blog | I make mistakes, so you don't have to{% endblock title %}
+{% block navbar %}
 {% include 'inserts/navbar.html' %}
+{% endblock navbar %}
 {% block content %}
-<header>
-    <h1 class="text-center">Posts</h1>
-</header>
-<section>
+<section class="post-list">
     {% for post in posts %}
     <article>
-        <header>
-            <h3 class="text-center">{{ post.title }}</h3>
-        </header>
-        <section>
-            <p>{{ summary }}</p>
-            <p><a href="{{url_for('blog.post_view', post_title=post.title) }}">I demand more</a></p>
-        </section>
+        <div class="post">
+            <header>
+                <h1 class="text-center">{{ post.title | title }}</h1>
+            </header>
+            <section class="summary">
+                <p>{{ post.summary }}</p>
+                <p class="text-right"><a href="{{url_for('blog.post_view', post_title=post.title) }}">I demand more</a></p>
+                {% if not loop.last %}<hr>{% endif %}
+            </section>
+        </div>
     </article>
     {% endfor %}
 </section>
