--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,15 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %}Login | blog{% endblock title %}
+{% block title %}Login{% endblock title %}
 
 {% block navbar %}
-<nav class="nav navbar-nav">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <h1>dasBlog</h1>
-        </div>
-    </div>
-</nav>
 {% endblock navbar %}
 
 {% block content %}
