--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,7 +49,7 @@
     </main>
 
     <footer class="container-fluid">
-        <p class="pull-left"><a href="https://twitter.com/dasdachs" target="_blank"><span class="fa fa-twitter"></span></a> <a href="https://github.com/dasdachs"  target="_blank"><span class="fa fa-github"></span></a></p>
+        <p class="pull-left"><a href="https://twitter.com/dasdachs" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> <a href="https://github.com/dasdachs"  target="_blank"><span class="fa fa-github fa-2x"></span></a></p>
         <p class="pull-right">Built with:<a href="http://flask.pocoo.org/" target="_blank"> Flask</a> and many <a href="/humans.txt">more</a>.
         <p class="text-center">&copy; dasdachs 2016</p>
     </footer>
