--- a/app/templates/admin/users.html
+++ b/app/templates/admin/users.html
@@ -3,11 +3,11 @@
 {% block content %}
 <section>
     <div class="container">
-        <section>
-            <div class="container">
-                <a href="{{ url_for('admin.add_user') }}" class="btn btn-primary btn-block">Add new user</a>
-            </div>
-        </section>
+        <a href="{{ url_for('admin.add_user') }}" class="btn btn-primary btn-block">Add new user</a>
+    </div>
+</section>
+<section>
+    <div class="container">
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
@@ -25,9 +25,9 @@
                     <th scope="row">{{ user.id }}</th>
                     <td>{{ user.username }}</td>
                     <td>{{ user.email }}</td>
-                    <td><a href="{{ url_for('admin.edit_user', user_id=user.id) }}" class="btn btn-success"><span class="fa fa-pencil"></span></a></td>
+                    <td><a href="{{ url_for('admin.edit_user', user_id=user.id) }}"><span class="fa fa-pencil fa-2x"></span></a></td>
                     {% if user.id != current_user.id %}
-                    <td><a href="{{ url_for('admin.delete_user', user_id=user.id) }}" class="btn btn-danger"><span class="fa fa-trash"></span></a></td>
+                    <td><a href="{{ url_for('admin.delete_user', user_id=user.id) }}"><span class="fa fa-trash fa-2x"></span></a></td>
                     {% endif %}
                 </tr>
                 {% endfor %}
