--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -98,7 +98,7 @@ footer a {
     min-height: 10vh;
 }
 
-code {
+pre, code {
     background-color: #424242;
     color: white;
 }
@@ -157,6 +157,24 @@ code {
 .post a:hover {
     color: #000;
     text-decoration: none;
+}
+
+.single-post {
+    width: 60%;
+    margin: 2em auto;
+    padding: 1em 2em;
+    background-color: #FFF;
+}
+
+@media (max-width: 992px) {
+    .single-post {
+        width: 90%;
+    }
+}
+
+.single-post-text {
+    font-size: 1.8em;
+    line-height: 1.5;
 }
 
 /* about, links ... */
