--- a/app/templates/blog/about.html
+++ b/app/templates/blog/about.html
@@ -9,6 +9,7 @@
         <h1 class="text-center">About me</h1>
     </header>
     <section>
+        {% text %}
     </section>
 </article>
 {% endblock content %}
