--- a/app/templates/blog/home.html
+++ b/app/templates/blog/home.html
@@ -10,10 +10,11 @@
         <div class="post">
             <header>
                 <h1 class="text-center">{{ post.title | title }}</h1>
+                <p><small><span class="fa fa-calendar-o"></span> {{ post.pub_date.strftime('%d %m %Y') }} by <span class="fa fa-pencil-o"></span> {{post.user.username}}</small></p>
             </header>
             <section class="summary">
                 <p>{{ post.summary }}</p>
-                <p class="text-left"><a href="{{url_for('blog.post_view', post_title=post.title) }}">I demand more</a></p>
+                <p class="text-left"><a href="{{url_for('blog.post_view', post_slug=post.slug) }}">I demand more</a></p>
             </section>
         </div>
     </article>
