--- a/app/templates/blog/post.html
+++ b/app/templates/blog/post.html
@@ -1,16 +1,25 @@
 {% extends 'base.html' %}
 {% block title %}{{ post.title }}| das blog{% endblock title %}
+{% block navbar %}
+{% include 'inserts/navbar.html' %}
+{% endblock navbar %}
 {% block content %}
 <section>
-    <article>
+    <article class="single-post">
         <header>
             <h1 class="text-center">{{ post.title }}</h1>
+            <p><small><span class="fa fa-calendar-o"></span> {{ post.pub_date.strftime('%d %m %Y') }} by <span class="fa fa-pencil-o"></span> {{post.user.username}}</small></p>
         </header>
-        <section>
-        {{ post.summary }}
-        {% filter markdown %}
-        {{ post.body }}
-        {% endfilter %}
+        <section class="single-post-text">
+            <div class="summary">
+                {{ post.summary }}
+            </div>
+        <br>
+            <div>
+                {% filter markdown %}
+                {{ post.body }}
+                {% endfilter %}
+            </div>
         {% endblock content %}
         </section>
     </article>
