--- a/app/templates/admin/posts.html
+++ b/app/templates/admin/posts.html
@@ -11,6 +11,7 @@ Posts
                     <tr>
                         <th>#</th>
                         <th>Title</th>
+                        <th>Link</th>
                         <th>Created</th>
                         <th>Modified</th>
                         <th>Published</th>
@@ -24,13 +25,13 @@ Posts
                     <tr>
                         <th scope="row">{{ post.id }}</th>
                         <td>{{ post.title }}</td>
-                        <td><a href="{{post.slug}}"><span class="fa fa-link"></span></a></td>
+                        <td><a href="{{ url_for('blog.post_view', post_slug=post.slug) }}"><span class="fa fa-link"></span></a></td>
                         <td>{% if post.created %}{{ post.created.strftime('%d-%m-%Y') }}{% endif %}</td>
                         <td>{% if post.modified %}{{ post.modified.strftime('%d-%m-%Y') }}{% endif %}</td>
                         <td>{% if post.pub_date %}{{ post.pub_date.strftime('%d-%m-%Y') }} {% else %}Draft{% endif %}</td>
                         <td>{{ post.user.username }}</td>
                         <td><a href="{{ url_for ('admin.edit_post', post_id=post.id) }}"><span class="fa fa-pencil fa-2x"></span></a></td>
-                        <td><a href="{{ url_for ('admin.delete_post', post_id=post.id) }}><span class="fa fa-trash fa-2x"></span></a></td>
+                        <td><a href="{{ url_for ('admin.delete_post', post_id=post.id) }}"><span class="fa fa-trash fa-2x"></span></a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
