--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,10 +48,12 @@
     {% endblock content %}
     </main>
 
-    <footer class="container-fluid">
-        <p class="pull-left"><a href="https://twitter.com/dasdachs" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> <a href="https://github.com/dasdachs"  target="_blank"><span class="fa fa-github fa-2x"></span></a></p>
-        <p class="pull-right">Built with:<a href="http://flask.pocoo.org/" target="_blank"> Flask</a> and many <a href="/humans.txt">more</a>.
-        <p class="text-center">&copy; dasdachs 2016</p>
+    <footer>
+        <div class="container">
+            <p class="pull-left"><a href="https://twitter.com/dasdachs" target="_blank"><span class="fa fa-twitter fa-2x"></span></a> <a href="https://github.com/dasdachs"  target="_blank"><span class="fa fa-github fa-2x"></span></a></p>
+            <p class="pull-right">Built with:<a href="http://flask.pocoo.org/" target="_blank"> Flask</a> and many <a href="/humans.txt">more</a>.
+            <p class="text-center">&copy; dasdachs 2016</p>
+        </div>
     </footer>
 
     <!-- scripts -->
