--- a/app/templates/blog/home.html
+++ b/app/templates/blog/home.html
@@ -10,7 +10,7 @@
         <div class="post">
             <header>
                 <h1 class="text-center">{{ post.title | title }}</h1>
-                <p><small><span class="fa fa-calendar-o"></span> {{ post.pub_date.strftime('%d %m %Y') }} by <span class="fa fa-pencil-o"></span> {{post.user.username}}</small></p>
+                <p><small><span class="fa fa-calendar-o"></span> {{ post.pub_date.strftime('%d %m %Y') }} by {{post.user.username}}</small></p>
             </header>
             <section class="summary">
                 <p>{{ post.summary }}</p>
