--- a/app/templates/blog/post.html
+++ b/app/templates/blog/post.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ post.title }}| das blog{% endblock title %}
+{% block title %}{{ post.title }} | das blog{% endblock title %}
 {% block navbar %}
 {% include 'inserts/navbar.html' %}
 {% endblock navbar %}
@@ -8,7 +8,7 @@
     <article class="single-post">
         <header>
             <h1 class="text-center">{{ post.title }}</h1>
-            <p><small><span class="fa fa-calendar-o"></span> {{ post.pub_date.strftime('%d %m %Y') }} by <span class="fa fa-pencil-o"></span> {{post.user.username}}</small></p>
+            <p><small><span class="fa fa-calendar-o"></span> {{ post.pub_date.strftime('%d %m %Y') }} by {{post.user.username}}</small></p>
         </header>
         <section class="single-post-text">
             <div class="summary">
