Migrating to api and vue.js

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -28,8 +28,12 @@
     <meta name="description" content="A blog documenting my path from 0 Python or CS knowledge to the present. Mostly it will be code snippets and solutions to problems that I encountered.">
     <meta name="keywords" content="Python, Flask, Django, Javascript, webframeworks, webdevelopment {% block keywords %}{% endblock %}">
     <link rel="author" href="/humans.txt" />
+    
+    {# comment out and include google analytics
 
     {% include 'private/google_analytics.html' %}
+    
+    #}
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
